--- a/public/css/rincian-pesanan.css
+++ b/public/css/rincian-pesanan.css
@@ -45,6 +45,11 @@
     border-radius: 8px;
 }
 
+.toko-box {
+    border-left: 5px solid #343a40;
+    border-radius: 8px;
+}
+
 .nama-toko {
     font-size: 16px;
     font-weight: bold;
@@ -79,6 +84,16 @@
 }
 
 .produk-variasi {
+    font-size: 14px;
+    color: #777;
+}
+
+.produk-size {
+    font-size: 14px;
+    color: #777;
+}
+
+.produk-kualitas {
     font-size: 14px;
     color: #777;
 }
