--- a/public/css/rincian-pesanan.css
+++ b/public/css/rincian-pesanan.css
@@ -98,6 +98,26 @@
     color: #777;
 }
 
+.alamat-item {
+    font-size: 14px;
+    color: #777;
+}
+
+.metode-item {
+    font-size: 14px;
+    color: #777;
+}
+
+.pembayaran-item {
+    font-size: 14px;
+    color: #777;
+}
+
+.alamat-item {
+    font-size: 14px;
+    color: #777;
+}
+
 .produk-harga {
     color: #0d6efd;
     font-weight: bold;
